# HALO

./: .gitignore  .infisical.json  README.md  Taskfile.yml  pyproject.toml  pyrightconfig.json
benchmarks/appworld/: .env.example  .gitignore  README.md  agent.py  pyproject.toml  run_batch.py  run_one_task.py  tracing.py  verify_traces.py
bubblewrap-bin/: LICENSE  README.md  pyproject.toml
bubblewrap-bin/scripts/: build_bwrap.sh
bubblewrap-bin/src/bubblewrap_bin/: __init__.py
bubblewrap-bin/tests/: test_bwrap_path.py
cli/: README.md  pyproject.toml
cli/halo_cli/: main.py
demo/claude-agent-sdk-demo/: .env.example  README.md  main.py  pyproject.toml  tracing.py
demo/claude-agent-sdk-demo/sample-traces/: README.md  raw-traces.ndjson
demo/openai-agents-sdk-demo/: .env.example  README.md  agent.py  inference_otlp_exporter.py  main.py  pyproject.toml  tracing.py  verify_traces.py
demo/openai-agents-sdk-demo/sample-traces/: README.md  raw-traces.ndjson  traces-by-trace.jsonl  traces.jsonl
engine/: .gitignore  README.md  Taskfile.yml  engine_config.py  errors.py  main.py  model_config.py  model_provider_config.py  pyproject.toml  pyrightconfig.json
engine/agents/: agent_config.py  agent_context.py  compactor.py  engine_run_state.py  llm_retry.py  openai_agent_runner.py  openai_sdk_client.py  prompt_templates.py  runner_protocol.py
engine/code/: _limits.py  _paths.py  _subprocess.py  _textwindow.py  code_repo.py  models.py
engine/engine/: engine_config.py  main.py  model_config.py
engine/engine/agents/: agent_config.py  agent_context.py  agent_context_items.py  agent_execution.py  compactor.py  engine_output_bus.py  engine_run_state.py  openai_agent_runner.py  openai_compactor.py  openai_event_mapper.py  prompt_templates.py  runner_protocol.py
engine/engine/models/: engine_output.py  json_value.py  messages.py
engine/engine/sandbox/: README.md  __init__.py  bootstrap.py  linux_client.py  log.py  macos_client.py  models.py  platform_commands.py  pyodide_client.py  pyodide_runtime.py  pyodide_trace_compat.py  runner.js  runtime_mounts.py  sandbox.py  sandbox_availability.py  sandbox_bootstrap.py  sandbox_config.py  sandbox_paths.py  sandbox_policy.py  sandbox_results.py  sandbox_runner.py
engine/engine/tools/: agent_context_tools.py  run_code_tool.py  subagent_result.py  subagent_tool_factory.py  synthesis_tool.py  tool_protocol.py  trace_tools.py
engine/engine/traces/: trace_index_builder.py  trace_store.py
engine/engine/traces/models/: canonical_span.py  trace_index_config.py  trace_index_models.py  trace_query_models.py
engine/git/: git_repo.py  models.py
engine/models/: engine_output.py
engine/sandbox/: README.md  runner.js  sandbox.py
engine/scripts/: build_sandbox_venv.sh  setup-git-hooks.sh  validate_pinned_versions.py
engine/scripts/git-hooks/: pre-commit  pre-push
engine/telemetry/: __init__.py  local_processor.py  setup.py  tracing.py
engine/tests/: _sdk_events.py
engine/tests/e2e/: test_engine_e2e.py
engine/tests/fixtures/: medium_traces.jsonl  tiny_traces.jsonl
engine/tests/integration/: test_engine_compaction.py  test_engine_e2e.py  test_engine_subagent.py  test_get_dataset_overview_isolation.py  test_run_code_isolation.py  test_sandbox_availability.py  test_sandbox_policy_denials.py  test_sandbox_runner.py  test_tool_call_subagent.py  test_tool_count_traces.py  test_tool_inventory.py  test_tool_query_traces.py  test_tool_run_code.py  test_tool_search_span.py  test_tool_synthesize_traces.py  test_tool_view_spans.py  test_tool_view_trace.py  tool_isolation_kit.py
engine/tests/integration-linux/: conftest.py  test_sandbox_availability.py  test_sandbox_policy_denials.py  test_sandbox_runner.py
engine/tests/integration-macos/: conftest.py  test_sandbox_availability.py  test_sandbox_policy_denials.py  test_sandbox_runner.py
engine/tests/integration-sandbox/: conftest.py  test_sandbox_availability.py  test_sandbox_policy_denials.py  test_sandbox_runner.py
engine/tests/integration/linux/: test_sandbox_policy_denials.py  test_sandbox_runner.py
engine/tests/integration/macos/: test_sandbox_policy_denials.py  test_sandbox_runner.py
engine/tests/probes/: README.md  example_agent_context_input.py  example_circuit_breaker.py  example_compaction.py  example_depth_enforcement.py  example_final_sentinel.py  example_streaming_contract.py  example_subagent_lifecycle.py  probe_kit.py  probe_max_turns_forwarding.py
engine/tests/unit/: test_engine_config.py  test_main.py  test_model_config.py
engine/tests/unit/agents/: test_agent_config.py  test_agent_context.py  test_agent_context_items.py  test_agent_execution.py  test_engine_output_bus.py  test_engine_run_state.py  test_openai_agent_runner.py  test_openai_event_mapper.py  test_prompt_templates.py
engine/tests/unit/models/: test_json_value.py
engine/tests/unit/sandbox/: conftest.py  test_bootstrap.py  (+13 more)
engine/tools/: agent_context_tools.py  code_tools.py  git_tools.py  subagent_tool_factory.py  synthesis_tool.py  tool_protocol.py  trace_tools.py
engine/traces/: care_ai_langfuse.py  source_adapters.py  trace_index_builder.py  trace_store.py
engine/traces/models/: trace_index_config.py  trace_index_models.py  trace_query_models.py
rlm/: .env.example  README.md  cli.py  pyproject.toml  registry.py
rlm/catalog/: README.md  __init__.py  _template.py.example
rlm/dataset/: __init__.py  _fastjson.py  autodetect.py  autodetect_llm.py  descriptor.py  indexer.py  reader.py  store.py
rlm/dataset/formats/: __init__.py  claude_code.py  hf.py  openinference.py  trace_view.py
rlm/dataset/translators/: __init__.py  hf_to_openinference.py
rlm/inference/: __init__.py  config.py  harness.py  run.py  sandbox.py  tools.py
rlm/scripts/: extract_pathrich.py
rlm/tests/: conftest.py  test_dataset.py
rlm/tests/fixtures/: claude-code-sample-traces.jsonl
rlm/utils/: README.md  __init__.py  batch.py  hypers.py
rlm/utils/llm/: README.md  __init__.py  _complete.py  _providers.py
rlm/web/: __init__.py  conversations.py  history.py  server.py
rlm/web/static/: index.html
(+197 files in other folders)
