[project]
name = "halo-cli"
version = "0.1.0"
description = "HALO command-line entrypoints — not shipped with halo-engine."
requires-python = ">=3.12,<3.13"
dependencies = [
    "halo-engine",
    "typer>=0.15",
    "loguru>=0.7.3",
    "rich>=14.3",
]

[project.scripts]
halo-engine = "halo_cli.main:app"

[tool.uv.sources]
halo-engine = { path = "../engine", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["halo_cli"]
