[project]
name = "halo-engine"
version = "0.1.0"
description = "HALO engine: LLM agent runtime over OTel trace data."
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.8",
    "loguru>=0.7.3",
    "rich>=14.3",
    "typer>=0.15",
    "openai>=1.60",
    "openai-agents>=0.1",
    "orjson>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[tool.ruff]
line-length = 100
target-version = "py312"
