[project]
name = "halo-rlm"
version = "0.1.0"
description = "HALO RLM — LLM-driven agent harness for exploring large agent-trace datasets."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "loguru>=0.7.3",
    "rich>=14.3.3",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "orjson>=3.10",
    # Inlined ``utils`` package (lives at ./utils/) handles LLM calls + hypers.
    "openai>=1.0",
    "httpx>=0.27",
]

[project.scripts]
halo = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli.py", "registry.py", "catalog", "dataset", "inference", "utils", "web"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    # Pulled in by ``dataset.translators.hf_to_openinference`` in the test suite.
    "datasets>=2.0",
]
